pcai-kaops/kubernetes/base/thingsboard-ui-deployment.yaml
# kubernetes/base/thingsboard-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thingsboard-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thingsboard-ui
  template:
    metadata:
      labels:
        app: thingsboard-ui
    spec:
      # --- Add this section ---
      imagePullSecrets:
      - name: dockerhub-creds # This must match the name of the secret you created
      # ------------------------
      containers:
      - name: thingsboard-ui
        image: devsds/thingsboard-ui:latest # The custom UI image
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
