pcai-kaops/kubernetes/base/thingsboard-virtualservice.yaml
# kubernetes/base/thingsboard-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: thingsboard-vs
spec:
  gateways:
  - istio-system/ezaf-gateway
  hosts:
  - thingsboard.hpepcai-ingress.pcai.hpecic.net
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        # --- FIX: Changed host to point to the new UI service ---
        host: thingsboard-ui-service
        port:
          number: 8080
